# med-image-scanner

./: README.md  docker-compose.yml  vscode.code-workspace
ai/: .dockerignore  .env.default  README.md  pyproject.toml
ai/src/: brain_tumor_classifier.py  chest_ct_inference.py  cxr.py
ai/src/dto/: base_model.py  ml_model_type.py  result.py
ai/src/lit_serve/: README.md  chest_ct_server.py  llm_server.py  setup.sh
ai/src/lit_serve/enums/: __init__.py  llm_pormpt.py
ai/src/services/: __init__.py  storage_service.py
ai/src/utils/: __init__.py  dicom_utils.py  env_utils.py
backend/: .env.default  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/docs/: ai-interaction.md  migration-guide.md  ml-interaction.md
backend/scripts/: add-migration.cmd  apply-migration.cmd  clear-cache.cmd  run-app.cmd  seed-db.cmd
backend/src/: main.py
backend/src/application/commands/organization/create_organization/: command.py  handler.py
backend/src/application/commands/organization/delete_organization/: command.py  handler.py
backend/src/application/commands/organization/invite_to_org/: __init__.py  command.py  handler.py
backend/src/application/commands/organization/join_organization/: command.py  (+1 more)
backend/src/application/email_templates/: __init__.py  invite_to_org.html  invite_to_signup.html  jinja_env.py  password_recovery.html
backend/src/application/models/: __init__.py  annotation.py  dicomweb_url.py  document.py  finding.py  organization.py  patient.py  report.py  series.py  signin_result.py  study.py  user.py
backend/src/application/services/: __init__.py  email_sender.py  ml_service.py  organization_service.py  patient_service.py  smtp_creds.py  storage_service.py  token_service.py  user_service.py
backend/src/application/services/dicom/: __init__.py  dicom_instance.py  dicom_patient.py  dicom_series.py  dicom_service.py  dicom_study.py  dicom_tag.py  dicom_value_type.py
backend/src/application/utils/: __init__.py  query_helpers.py  validators.py
backend/src/core/: __init__.py  command.py  di_container.py  event_handler.py  event_interface.py  mediator.py  paged_query.py  paged_result.py  query.py  request_handler.py  request_interface.py  result.py  searchable_query.py
backend/src/domain/entities/: __init__.py  annotation.py  bookmark_report.py  document.py  entity.py  finding.py  message.py  notification.py  organization.py  patient.py  report.py  series.py  study.py  user.py  user_role.py
backend/src/domain/enums/: __init__.py  gender.py  ml_model_type.py  user_role_type.py
backend/src/domain/value_objects/: address.py
backend/src/infrastructure/: __init__.py  connection_settings.py  db_context.py  repository.py  unit_of_work.py
backend/src/infrastructure/migrations/: env.py
backend/src/infrastructure/migrations/versions/: 318e7879fd9b_version_0001.py
backend/src/presentation/: exception_handlers.py  seed_db.py  test_data.py
backend/src/presentation/routers/: __init__.py  api.py  auth.py  organization.py  patient.py  report.py  study.py  user.py
backend/tests/: repository_test.py
(+442 files in other folders)
