[tool.poetry]
name = "ml"
version = "0.1.0"
description = ""
authors = ["Sukhrob Ilyosbekov <SuxrobGM@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.116.1"}
pydicom = "^3.0.1"
pillow = "^11.3.0"
scikit-image = "^0.25.2"
streamlit = "^1.47.1"
matplotlib = "^3.10.5"
torch = {version = "^2.4.0+cu124", source = "pytorch_cuda"}
torchvision = {version = "^0.19.0+cu124", source = "pytorch_cuda"}
torchaudio = {version = "^2.4.0+cu124", source = "pytorch_cuda"}
torchxrayvision = "^1.3.5"
lightning = "^2.5.2"
tensorflow = "^2.19.0"
python-dotenv = "^1.1.1"
python-multipart = "^0.0.20"
opencv-python-headless = "^4.12.0.88"


[[tool.poetry.source]]
name = "pytorch_cuda"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
