[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend app"
authors = ["Sukhrob Ilyosbekov"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
sqlmodel = "^0.0.21"
alembic = "^1.13.1"
python-dotenv = "^1.0.1"
bcrypt = "^4.1.3"
pyjwt = "^2.8.0"
mimesis = "^17.0.0"
jinja2 = "^3.1.4"
psycopg2-binary = "^2.9.9"
requests = "^2.32.3"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
