[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend app"
authors = ["Sukhrob Ilyosbekov"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.116.1"
sqlmodel = "^0.0.24"
alembic = "^1.16.4"
python-dotenv = "^1.1.1"
bcrypt = "^4.3.0"
pyjwt = "^2.10.1"
mimesis = "^18.0.0"
jinja2 = "^3.1.6"
psycopg2-binary = "^2.9.10"
requests = "^2.32.4"
python-multipart = "^0.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
